--- a/htmls/researches/20220628Current.html
+++ b/htmls/researches/20220628Current.html
@@ -6,87 +6,30 @@
       If you want to use all or some content in this project, you must observe this license.
 -->
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="author" content="Killmil Biratch">
+<html lang="en" class="html-others">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no">
+    <meta name="author" content="Killmil Biratch">
 
-        <link rel="shortcut icon" href="../../resources/images/favicon.ico">
-        <title>KB's personal web</title>
+    <link rel="shortcut icon" href="../../resources/images/favicon.ico">
+    <title>Killmil Biratch</title>
 
-        <meta name="description" content="Personal website of Killmil Biratch">
-        <meta name="keywords" content="killmil, biratch, killmil biratch">
+    <meta name="description" content="Personal website of Killmil Biratch">
+    <meta name="keywords" content="Killmil, Biratch, Killmil Biratch, killmil, biratch, killmil biratch">
 
-        <link rel="stylesheet" href="../../css/styleDay.css">
-    </head>
-    <body>
-        <header>
-            <span id="header-span-a"><a href="javascript:history.back(-1)">KILLMIL BIRATCH</a></span>
-            <a id="header-a" href="../../projects.html"><b>Projects</b></a>
-            <a id="header-a" href="../../blogs.html"><b>Blogs</b></a>
-            <a id="header-a" href="../../researches.html"><b>Researches</b></a>
-            <a id="header-a" href="../../aAndc.html"><b>A & C</b></a>
-        </header>
-        <div class="div-coRoot">
-            <!--div class="div-coRoot-coDirectory">
-                <h1>Directory</h1>
-                <div class="div-coRoot-coDirectoryContent">
-                </div>
-            </div-->
-            <div class="div-coRoot-coContent">
-                <div class="div-coRoot-coNotice">
-                    <p><b>The text, illustrations, etc. contained in this page and affiliated links follow <a>Partially open sharing protocol</a>.</b></p>
-                </div>
-                <h1 id="div-coRoot-coContent-h1">Current research status and future development direction of agricultural robots</h1>
-                <p id="div-coRoot-coContent-dateAndMark">2022-06-28 | Journal issue | CN</p>
-                <div class="div-coRoot-coContent-form">
-                    <table width="100%" border="1" cellspacing="0">
-                        <tr>
-                            <td></td>
-                            <td colspan="3"><b>Title</b></td>
-                        </tr>
-                        <tr>
-                            <td>Original content</td>
-                            <td colspan="3">农业机器人的研究现状及未来发展方向展望</td>
-                        </tr>
-                        <tr>
-                            <td>Translated into English</td>
-                            <td colspan="3">Current research status and future development direction of agricultural robots</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td><b>The journal name</b></td>
-                            <td><b>The journal type</b></td>
-                            <td><b>Date of publication</b></td>
-                        </tr>
-                        <tr>
-                            <td>Original content</td>
-                            <td>农业开发与装备</td>
-                            <td>D、国家级期刊</td>
-                            <td>2022年06月28日</td>
-                        </tr>
-                        <tr>
-                            <td>Translated into English</td>
-                            <td>Agricultural development & Equipments</td>
-                            <td>General Journal</td>
-                            <td>June 28, 2022</td>
-                        </tr>
-                        <tr>
-                            <td colspan="4"><b>Languages supported by downloadable files</b></td>
-                        </tr>
-                        <tr>
-                            <td colspan="4">CN</td>
-                        </tr>
-                    </table>
-                </div>
-                <h4>CN</h4>
-                <p><b>摘要：</b>文章通过叙述农业机器人领域<span id="div-coRoot-coContent-chageWord">中国和其他国家（主要是日本和美国）</span>研究现状，分析了目前<span id="div-coRoot-coContent-chageWord">中国</span>在该领域与<span id="div-coRoot-coContent-chageWord">其他国家</span>的差距，并指出了<span id="div-coRoot-coContent-chageWord">中国</span>农业机器人技术发展缓慢主要是受工业制造水平、研究制造成本和智能化组件与系统应用三个方面的制约。同时，对农业机器人未来研究方向进行展望，指出未来相关领域研究重点应偏向实现农业机器人轻便化、模块化和自主化，并给出了相关理由，以期望为<span id="div-coRoot-coContent-chageWord">中国</span>未来农业机器人技术的发展提供参考。</p>
-                <br>
-                <h4>Attachments</h4>
-                <p>[1] <a href="../../resources/Attachments/researches/20220628Current/20220628Current-annex1.pdf">Original draft of the paper</a></p>
-                <p>[2] <a href="https://kns.cnki.net/kcms/detail/detail.aspx?dbcode=CJFD&dbname=CJFDAUTO&filename=NJJY202206009&uniplatform=NZKPT&v=3BY1pQPcyTS8uoF0sIaS3bLKYALkrKRSP276lywfjilvo9Bq-vcZ9kbMNb3c9za2">View online</a></p>
-            </div>
-        </div>
-    </body>
+    <link rel="stylesheet" href="../../css/StylePc1366.css">
+  </head>
+  <body class="body-others">
+    <div class="div-root-content">
+      <header class="header-NormalHeader">
+        <h1><a href="../../research.html">Researches</a></h1>
+      </header>
+      <div class="div-root-content-Content">
+        <h3>Current research status and future development direction of agricultural robots</h3>
+        <p id="div-root-content-Content-abstract">2022-06-28 | Journal issue</p>
+        <p>hello</p>
+      </div>
+    </div>
+  </body>
 </html>
