--- a/research.html
+++ b/research.html
@@ -26,7 +26,7 @@
         <h1><a href="index.html">Researches</a></h1>
       </header>
       <div class="div-root-research-Content">
-        <p>2022-06-28&emsp;&emsp;<a><b>Current research status and future development direction of agricultural robots</b></a></p>
+        <p>2022-06-28&emsp;&emsp;<a href="htmls/researches/20220628Current.html"><b>Current research status and future development direction of agricultural robots</b></a></p>
       </div>
     </div>
   </body>
