--- a/htmls/researches/20220628Current.html
+++ b/htmls/researches/20220628Current.html
@@ -22,13 +22,13 @@
   </head>
   <body class="body-others">
     <div class="div-root-content">
-      <header class="header-NormalHeader">
+      <header class="header-Content">
         <h1><a href="../../research.html">Researches</a></h1>
       </header>
       <div class="div-root-content-Content">
         <h3>Current research status and future development direction of agricultural robots</h3>
         <p id="div-root-content-Content-abstract">2022-06-28 | Journal issue</p>
-        <p>hello</p>
+        <p id="div-root-content-Content-text">hello</p>
       </div>
     </div>
   </body>
