--- a/htmls/researches/20220628Current.html
+++ b/htmls/researches/20220628Current.html
@@ -28,6 +28,26 @@
       <div class="div-root-content-Content">
         <h3>Current research status and future development direction of agricultural robots</h3>
         <p id="div-root-content-Content-abstract">2022-06-28 | Journal issue</p>
+        <div class="div-root-content-Content-table">
+          <table>
+            <tr>
+              <td><b>The journal name</b></td>
+              <td><b>The journal type</b></td>
+              <td><b>Date of publication</b></td>
+            </tr>
+            <tr>
+              <td>Agricultural development & Equipments</td>
+              <td>General Journal</td>
+              <td>June 28,2022</td>
+            </tr>
+            <tr>
+              <td colspan="3"><b>supported Languages</b></td>
+          </tr>
+          <tr>
+              <td colspan="3">Chinese Simplified</td>
+          </tr>
+          </table>
+        </div>
         <p id="div-root-content-Content-text">hello</p>
       </div>
     </div>
