--- a/htmls/researches/20220628Current.html
+++ b/htmls/researches/20220628Current.html
@@ -46,9 +46,16 @@
           <tr>
               <td colspan="3">Chinese Simplified</td>
           </tr>
+          <tr>
+            <td colspan="3"><b>Attachments & Links</b></td>
+          </tr>
+          <tr>
+            <td colspan="3"><!--<a>Download</a>&#xe552;or&#xe552;--><a href="https://kns.cnki.net/kcms/detail/detail.aspx?dbcode=CJFD&dbname=CJFDLAST2022&filename=NJJY202206009&uniplatform=NZKPT&v=3BY1pQPcyTS8uoF0sIaS3bLKYALkrKRSP276lywfjimNnqFxDoAUdXOlZZvZg1OP">View online</a></td>
+          </tr>
           </table>
         </div>
-        <p id="div-root-content-Content-text">hello</p>
+        <p id="div-root-content-Content-text">By describing the current research status of China and other countries in the field of agricultural robots, the article analyzes the current gap between China and other countries in this field, and points out that the slow development of agricultural robot technology in China is mainly constrained by three aspects: industrial manufacturing level, research and manufacturing cost, and application of intelligent components and systems. At the same time, the future research directions of agricultural robots are prospected, and it is pointed out that the focus of future research in related fields should be biased toward achieving lightweight, modularity and autonomy of agricultural robots, and relevant reasons are given.</p>
+        <p id="div-root-content-Content-note">As a prospective article, it analyzes at a more superficial level the gaps between China's agricultural robotics and those of other countries, and the reasons for these gaps. It also provides a brief outlook on the future direction of agricultural robotics in light of recent trends in the development of intelligent machinery.</p>
       </div>
     </div>
   </body>
