--- a/project.html
+++ b/project.html
@@ -16,7 +16,6 @@
     <title>Killmil Biratch</title>
 
     <meta name="description" content="Personal website of Killmil Biratch">
-    <meta name="keywords" content="Killmil, Biratch, Killmil Biratch, killmil, biratch, killmil biratch">
 
     <link rel="stylesheet" href="css/StylePc1366.css">
   </head>
@@ -26,9 +25,9 @@
         <h1><a href="index.html">Projects</a></h1>
       </header>
       <div class="div-root-project-Content">
-        <p>2022-04-18&emsp;&emsp;<a href=""><b>K.Translation software</b></a></p>
-        <p>2022-01-04&emsp;&emsp;<a href=""><b>Cigarette gas filtration device designed based on the principle of air flow</b></a></p>
-        <p>2021-09-15&emsp;&emsp;<a href=""><b>Robotic arm host computer visual monitoring system</b></a></p>
+        <p id="div-root-project-Content-title">2022-04-18&emsp;&emsp;<a href=""><b>K.Translation software</b></a></p>
+        <p id="div-root-project-Content-title">2022-01-04&emsp;&emsp;<a href=""><b>Cigarette gas filtration device designed based on the principle of air flow</b></a></p>
+        <p id="div-root-project-Content-title">2021-09-15&emsp;&emsp;<a href="htmls/projects/20210915Robotic.html"><b>Robotic arm host computer visual monitoring system</b></a></p>
       </div>
     </div>
   </body>
