--- a/research.html
+++ b/research.html
@@ -16,7 +16,6 @@
     <title>Killmil Biratch</title>
 
     <meta name="description" content="Personal website of Killmil Biratch">
-    <meta name="keywords" content="Killmil, Biratch, Killmil Biratch, killmil, biratch, killmil biratch">
 
     <link rel="stylesheet" href="css/StylePc1366.css">
   </head>
@@ -26,7 +25,7 @@
         <h1><a href="index.html">Researches</a></h1>
       </header>
       <div class="div-root-research-Content">
-        <p>2022-06-28&emsp;&emsp;<a href="htmls/researches/20220628Current.html"><b>Current research status and future development direction of agricultural robots</b></a></p>
+        <p id="div-root-research-Content-title">2022-06-28&emsp;&emsp;<a href="htmls/researches/20220628Current.html"><b>Current research status and future development direction of agricultural robots</b></a></p>
       </div>
     </div>
   </body>
