--- a/htmls/researches/20220628Current.html
+++ b/htmls/researches/20220628Current.html
@@ -16,7 +16,6 @@
     <title>Killmil Biratch</title>
 
     <meta name="description" content="Personal website of Killmil Biratch">
-    <meta name="keywords" content="Killmil, Biratch, Killmil Biratch, killmil, biratch, killmil biratch">
 
     <link rel="stylesheet" href="../../css/StylePc1366.css">
   </head>
@@ -50,7 +49,7 @@
             <td colspan="3"><b>Attachments & Links</b></td>
           </tr>
           <tr>
-            <td colspan="3"><!--<a>Download</a>&#xe552;or&#xe552;--><a href="https://kns.cnki.net/kcms/detail/detail.aspx?dbcode=CJFD&dbname=CJFDLAST2022&filename=NJJY202206009&uniplatform=NZKPT&v=3BY1pQPcyTS8uoF0sIaS3bLKYALkrKRSP276lywfjimNnqFxDoAUdXOlZZvZg1OP">View online</a></td>
+            <td colspan="3"><!--a><i>Download attachment</i></a>&#xe552;or&#xe552;--><a href="https://kns.cnki.net/kcms/detail/detail.aspx?dbcode=CJFD&dbname=CJFDLAST2022&filename=NJJY202206009&uniplatform=NZKPT&v=3BY1pQPcyTS8uoF0sIaS3bLKYALkrKRSP276lywfjimNnqFxDoAUdXOlZZvZg1OP"><i>View online</i></a></td>
           </tr>
           </table>
         </div>
