--- a/htmls/projects/20210915Robotic.html
+++ b/htmls/projects/20210915Robotic.html
@@ -53,7 +53,7 @@
             <td colspan="3"><b>Attachments & Links</b></td>
           </tr>
           <tr>
-            <td colspan="3"><a><i>Download attachment</i></a>&#xe552;or&#xe552;<a href="https://www.ccopyright.com/index.php?com=com_noticeQuery&method=worksList&optionid=1220"><i>View online</i></a></td>
+            <td colspan="3"><a href="../../resources/Attachments/projects/20210915Robotic/20210915Robotic-annex1.pdf"><i>Download attachment</i></a>&#xe552;or&#xe552;<a href="https://www.ccopyright.com/index.php?com=com_noticeQuery&method=worksList&optionid=1220"><i>View online</i></a></td>
           </tr>
           </table>
         </div>
