--- a/htmls/projects/20210915Robotic.html
+++ b/htmls/projects/20210915Robotic.html
@@ -32,15 +32,15 @@
             <tr>
               <td><b>The software name</b></td>
               <td><b>Development completion time</b></td>
-              <td><b>Announcement Time</b></td>
+              <td><b>Announcement time</b></td>
             </tr>
             <tr>
               <td>Robotic arm host computer visual monitoring system</td>
-              <td>sep 15,2021</td>
+              <td>Sep 15,2021</td>
               <td>Nov 19,2021</td>
             </tr>
             <tr>
-              <td colspan="1"><b>supported Languages</b></td>
+              <td colspan="1"><b>Supported languages</b></td>
               <td><b>Exclusivity</b></td>
               <td><b>First author</b></td>
           </tr>
@@ -53,7 +53,7 @@
             <td colspan="3"><b>Attachments & Links</b></td>
           </tr>
           <tr>
-            <td colspan="3"><a href="../../resources/Attachments/projects/20210915Robotic/20210915Robotic-annex1.pdf"><i>Download attachment</i></a>&#xe552;or&#xe552;<a href="https://www.ccopyright.com/index.php?com=com_noticeQuery&method=worksList&optionid=1220"><i>View online</i></a></td>
+            <td colspan="3"><a href="../../resources/Attachments/projects/20210915Robotic/20210915Robotic-annex1.pdf"><i>Download attachment</i></a>&#xe552;or&#xe552;<a href="https://register.ccopyright.com.cn/publicInquiry.html?type=softList"><i>View online</i></a></td>
           </tr>
           </table>
         </div>
