--- a/project.html
+++ b/project.html
@@ -26,7 +26,7 @@
       </header>
       <div class="div-root-project-Content">
         <p id="div-root-project-Content-title">2022-04-18&emsp;&emsp;<a href=""><b>K.Translation software</b></a></p>
-        <p id="div-root-project-Content-title">2022-01-04&emsp;&emsp;<a href=""><b>Cigarette gas filtration device designed based on the principle of air flow</b></a></p>
+        <p id="div-root-project-Content-title">2022-01-04&emsp;&emsp;<a href="htmls/projects/20220104Cigarette.html"><b>Cigarette gas filtration device designed based on the principle of air flow</b></a></p>
         <p id="div-root-project-Content-title">2021-09-15&emsp;&emsp;<a href="htmls/projects/20210915Robotic.html"><b>Robotic arm host computer visual monitoring system</b></a></p>
       </div>
     </div>
