--- a/htmls/researches/20220628Current.html
+++ b/htmls/researches/20220628Current.html
@@ -40,7 +40,7 @@
               <td>June 28,2022</td>
             </tr>
             <tr>
-              <td colspan="3"><b>supported Languages</b></td>
+              <td colspan="3"><b>Supported languages</b></td>
           </tr>
           <tr>
               <td colspan="3">Chinese Simplified</td>
