--- a/htmls/projects/20220418K.html
+++ b/htmls/projects/20220418K.html
@@ -6,50 +6,60 @@
       If you want to use all or some content in this project, you must observe this license.
 -->
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="author" content="Killmil Biratch">
+<html lang="en" class="html-others">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no">
+    <meta name="author" content="Killmil Biratch">
 
-        <link rel="shortcut icon" href="../../resources/images/favicon.ico">
-        <title>KB's personal web</title>
+    <link rel="shortcut icon" href="../../resources/images/favicon.ico">
+    <title>Killmil Biratch</title>
 
-        <meta name="description" content="Personal website of Killmil Biratch">
-        <meta name="keywords" content="killmil, biratch, killmil biratch">
+    <meta name="description" content="Personal website of Killmil Biratch">
 
-        <link rel="stylesheet" href="../../css/styleDay.css">
-    </head>
-    <body>
-        <header>
-            <span id="header-span-a"><a href="javascript:history.back(-1)">KILLMIL BIRATCH</a></span>
-            <a id="header-a" href="../../projects.html"><b>Projects</b></a>
-            <a id="header-a" href="../../blogs.html"><b>Blogs</b></a>
-            <a id="header-a" href="../../researches.html"><b>Researches</b></a>
-            <a id="header-a" href="../../aAndc.html"><b>A & C</b></a>
-        </header>
-        <div class="div-coRoot">
-            <!--div class="div-coRoot-coDirectory">
-                <h1>Directory</h1>
-                <div class="div-coRoot-coDirectoryContent">
-                </div>
-            </div-->
-            <div class="div-coRoot-coContent">
-                <div class="div-coRoot-coNotice">
-                    <p><b>The text, illustrations, etc. contained in this page and affiliated links follow <a>Partially open sharing protocol</a>.</b></p>  
-                </div>
-                <h1 id="div-coRoot-coContent-h1">K.Translation software</h1>
-                <p id="div-coRoot-coContent-dateAndMark">2022-04-18 | Software | EN & CN & TC</p>
-                <h4>EN</h4>
-                <p>This paper describes an executable program that can run under Microsoft Windows operating system, named "K.Translation software" (referred to as "software" for short), and its version number is "V1.0". This software is registered by the National Copyright Administration of the People's Republic of China according to the relevant provisions in the Regulations of the People's Republic of China on the Protection of Computer Software and the Measures of the People's Republic of China on the Registration of Computer Software (Registration number "2022SR0787016"). According to the relevant provisions of the Berne Convention for the Protection of Literary and Artistic Works and the Copyright Law of the People's Republic of China, the copyright holder(s) shall enjoy full copyright and all other rights to the software.</p>
-                <p>This software can realize the function of instant translation of texts in two different languages, and the input text can be quickly converted into the target language text through this software.</p>
-                <h4>CN</h4>
-                <p>本文所述为一款可运行在搭载了Microsoft Windows系统的计算机上的可执行程序，名称为“酷翻译软件”（以下简称“该软件、软件”），版本号为“V1.0”。该软件依据《中华人民共和国计算机软件保护条例》和《中华人民共和国计算机软件著作权登记办法》中的有关规定，被中华人民共和国国家版权局登记在案（登记号为“2022SR0787016”）。依据《保护文学和艺术作品伯尔尼公约》（Berne Convention for the Protection of Literary and Artistic Works）和《中华人民共和国著作权法》等有关公约或法律文本的规定，著作权人（们）全体对软件享有完全的著作权和其他应享有的全部合法权利。</p>
-                <p>该软件能够实现两种不同语言文本即时转译的功能，通过该软件能够快速的（一般是即时的）将输入文本转换为目标语言文本。</p>
-                <h4>TC</h4>
-                <p>本文所述為一款可運行在搭載了MicrosoftWindows系統的計算機上的可執行程序，名稱為「酷翻譯軟體」（以下簡稱「該軟體、軟體」），版本號為「V1.0」。該軟體依據《中華人民共和國電腦軟體保護條例》和《中華人民共和國電腦軟體著作權登記辦法》中的有關規定，被中華人民共和國國家版權局登記在案（登記號為「2022SR0787016」）。依據《保護文學和藝術作品伯爾尼公約》（Berne Convention for the Protection of Literary and Artistic Works）和《中華人民共和國著作權法》等有關公約或法律文本的規定，著作權人（們）全體對軟件享有完全的著作權和其他應享有的全部合法權利。</p>
-                <p>該軟體能夠實現兩種不同語言文本即時轉譯的功能，通過該軟體能夠快速的（一般是即時的）將輸入文本轉換為目標語言文本。</p>
-            </div>
+    <link rel="stylesheet" href="../../css/StylePc1366.css">
+  </head>
+  <body class="body-others">
+    <div class="div-root-content">
+      <header class="header-Content">
+        <h1><a href="../../project.html">Projects</a></h1>
+      </header>
+      <div class="div-root-content-Content">
+        <h3>K.Translation</h3>
+        <p id="div-root-content-Content-abstract">2022-04-18 | Software</p>
+        <div class="div-root-content-Content-table">
+          <table>
+            <tr>
+              <td><b>The software name</b></td>
+              <td><b>Development completion time</b></td>
+              <td><b>Announcement time</b></td>
+            </tr>
+            <tr>
+              <td>K.Translation</td>
+              <td>Apr 15,2022</td>
+              <td>June 20,2022</td>
+            </tr>
+            <tr>
+              <td colspan="1"><b>Supported languages</b></td>
+              <td><b>Exclusivity</b></td>
+              <td><b>First author</b></td>
+          </tr>
+          <tr>
+              <td colspan="1">Chinese Simplified</td>
+              <td>T</td>
+              <td>T</td>
+          </tr>
+          <tr>
+            <td colspan="3"><b>Attachments & Links</b></td>
+          </tr>
+          <tr>
+            <td colspan="3"><a href=""><i>Download attachment</i></a>&#xe552;or&#xe552;<a href="https://register.ccopyright.com.cn/publicInquiry.html?type=softList"><i>View online</i></a></td>
+          </tr>
+          </table>
         </div>
-    </body>
+        <p id="div-root-content-Content-text">This software can realize the function of instant translation of texts in two different languages, and the input text can be quickly converted into the target language text through this software.</p>
+        <p id="div-root-content-Content-note">This paper describes an executable program that can run under Microsoft Windows operating system, named "K.Translation software" (referred to as "software" for short), and its version number is "V1.0". This software is registered by the National Copyright Administration of the People's Republic of China according to the relevant provisions in the Regulations of the People's Republic of China on the Protection of Computer Software and the Measures of the People's Republic of China on the Registration of Computer Software (Registration number "2022SR0787016"). According to the relevant provisions of the Bern Convention for the Protection of Literary and Artistic Works and the Copyright Law of the People's Republic of China, the copyright holder(s) shall enjoy full copyright and all other rights to the software.</p>
+      </div>
+    </div>
+  </body>
 </html>
