--- a/htmls/projects/20220418K.html
+++ b/htmls/projects/20220418K.html
@@ -53,7 +53,7 @@
             <td colspan="3"><b>Attachments & Links</b></td>
           </tr>
           <tr>
-            <td colspan="3"><a href=""><i>Download attachment</i></a>&#xe552;or&#xe552;<a href="https://register.ccopyright.com.cn/publicInquiry.html?type=softList"><i>View online</i></a></td>
+            <td colspan="3"><a href=""><i>Download attachment</i></a>&#xe552;or&#xe552;<a href="https://register.ccopyright.com.cn/publicInquiry.html?type=softList&registerNumber=2022SR0787016&keyWord=%E5%BC%A0%E7%90%9B&publicityType=ALL&registerDateType=ALL"><i>View online</i></a></td>
           </tr>
           </table>
         </div>
