--- a/htmls/projects/20210915Robotic.html
+++ b/htmls/projects/20210915Robotic.html
@@ -31,29 +31,31 @@
           <table>
             <tr>
               <td><b>The software name</b></td>
-              <td><b>Development completion time</b></td>
+              <td colspan="2"><b>Development completion time</b></td>
               <td><b>Announcement time</b></td>
             </tr>
             <tr>
               <td>Robotic arm host computer visual monitoring system</td>
-              <td>Sep 15,2021</td>
+              <td colspan="2">Sep 15,2021</td>
               <td>Nov 19,2021</td>
             </tr>
             <tr>
-              <td colspan="1"><b>Supported languages</b></td>
+              <td><b>Version</b></td>
               <td><b>Exclusivity</b></td>
               <td><b>First author</b></td>
+              <td colspan="1"><b>Supported languages</b></td>
           </tr>
           <tr>
+            <td>V1.0</td>
+              <td>F</td>
+              <td>F</td>
               <td colspan="1">Chinese Simplified</td>
-              <td>F</td>
-              <td>F</td>
           </tr>
           <tr>
-            <td colspan="3"><b>Attachments & Links</b></td>
+            <td colspan="4"><b>Attachments & Links</b></td>
           </tr>
           <tr>
-            <td colspan="3"><a href="../../resources/Attachments/projects/20210915Robotic/20210915Robotic-annex1.pdf"><i>Download attachment</i></a>&#xe552;or&#xe552;<a href="https://register.ccopyright.com.cn/publicInquiry.html?type=softList&registerNumber=2021SR1799776&keyWord=%E6%9C%BA%E6%A2%B0%E8%87%82%E4%B8%8A%E4%BD%8D%E6%9C%BA%E5%8F%AF%E8%A7%86%E5%8C%96%E7%9B%91%E6%8E%A7%E7%B3%BB%E7%BB%9F&publicityType=ALL&registerDateType=ALL%E3%80%91"><i>View online</i></a></td>
+            <td colspan="4"><a href="../../resources/Attachments/projects/20210915Robotic/20210915Robotic-annex1.pdf"><i>Download attachment</i></a>&#xe552;or&#xe552;<a href="https://register.ccopyright.com.cn/publicInquiry.html?type=softList&registerNumber=2021SR1799776&keyWord=%E6%9C%BA%E6%A2%B0%E8%87%82%E4%B8%8A%E4%BD%8D%E6%9C%BA%E5%8F%AF%E8%A7%86%E5%8C%96%E7%9B%91%E6%8E%A7%E7%B3%BB%E7%BB%9F&publicityType=ALL&registerDateType=ALL%E3%80%91"><i>View online</i></a></td>
           </tr>
           </table>
         </div>
