--- a/htmls/projects/20220418K.html
+++ b/htmls/projects/20220418K.html
@@ -31,29 +31,31 @@
           <table>
             <tr>
               <td><b>The software name</b></td>
-              <td><b>Development completion time</b></td>
+              <td colspan="2"><b>Development completion time</b></td>
               <td><b>Announcement time</b></td>
             </tr>
             <tr>
               <td>K.Translation</td>
-              <td>Apr 15,2022</td>
+              <td colspan="2">Apr 15,2022</td>
               <td>Jun 20,2022</td>
             </tr>
             <tr>
-              <td colspan="1"><b>Supported languages</b></td>
+              <td><b>Version</b></td>
               <td><b>Exclusivity</b></td>
               <td><b>First author</b></td>
+              <td colspan="1"><b>Supported languages</b></td>
           </tr>
           <tr>
+            <td>V1.0</td>
+              <td>T</td>
+              <td>T</td>
               <td colspan="1">Chinese Simplified</td>
-              <td>T</td>
-              <td>T</td>
           </tr>
           <tr>
-            <td colspan="3"><b>Attachments & Links</b></td>
+            <td colspan="4"><b>Attachments & Links</b></td>
           </tr>
           <tr>
-            <td colspan="3"><a href=""><i>Download attachment</i></a>&#xe552;or&#xe552;<a href="https://register.ccopyright.com.cn/publicInquiry.html?type=softList&registerNumber=2022SR0787016&keyWord=%E5%BC%A0%E7%90%9B&publicityType=ALL&registerDateType=ALL"><i>View online</i></a></td>
+            <td colspan="4"><a href="../../resources/Attachments/projects/20220418K/20220418K-annex1.pdf"><i>Download attachment</i></a>&#xe552;or&#xe552;<a href="https://register.ccopyright.com.cn/publicInquiry.html?type=softList&registerNumber=2022SR0787016&keyWord=%E5%BC%A0%E7%90%9B&publicityType=ALL&registerDateType=ALL"><i>View online</i></a></td>
           </tr>
           </table>
         </div>
