--- a/htmls/projects/20210915Robotic.html
+++ b/htmls/projects/20210915Robotic.html
@@ -55,8 +55,13 @@
             <td colspan="4"><b>Attachments & Links</b></td>
           </tr>
           <tr>
-            <td colspan="4"><a href="../../resources/Attachments/projects/20210915Robotic/20210915Robotic-annex1.pdf"><i>Download attachment</i></a>&#xe552;or&#xe552;<a href="https://register.ccopyright.com.cn/publicInquiry.html?type=softList&registerNumber=2021SR1799776&keyWord=%E6%9C%BA%E6%A2%B0%E8%87%82%E4%B8%8A%E4%BD%8D%E6%9C%BA%E5%8F%AF%E8%A7%86%E5%8C%96%E7%9B%91%E6%8E%A7%E7%B3%BB%E7%BB%9F&publicityType=ALL&registerDateType=ALL%E3%80%91"><i>View online</i></a></td>
+            <td><b>Proof of Copyright</b></td>
+            <td colspan="3"><a href="../../resources/Attachments/projects/20210915Robotic/20210915Robotic-annex1.pdf"><i>Download attachment</i></a>&#xe552;or&#xe552;<a href="https://register.ccopyright.com.cn/publicInquiry.html?type=softList&registerNumber=2021SR1799776&keyWord=%E6%9C%BA%E6%A2%B0%E8%87%82%E4%B8%8A%E4%BD%8D%E6%9C%BA%E5%8F%AF%E8%A7%86%E5%8C%96%E7%9B%91%E6%8E%A7%E7%B3%BB%E7%BB%9F&publicityType=ALL&registerDateType=ALL%E3%80%91"><i>View online</i></a></td>
           </tr>
+          <!--tr>
+            <td><b>Installation file download</b></td>
+            <td colspan="3"></td>
+          </tr-->
           </table>
         </div>
         <p id="div-root-content-Content-text">The purpose of the software development is to provide a comprehensive service for the monitoring of robotic arms (or to monitor the working status of small robotic arms). The software is programmed in Java and is intended for the industry "robotic arm monitoring". The main function of the software is "to carry out information management of robotic arm upper monitoring, to complete the relevant data integration, to carry out data management of robotic arm upper monitoring, to complete robotic arm upper monitoring processing, to use the software to run automatically, to assist users in operation and processing, and to realize reasonable robotic arm upper monitoring". The software has the following technical features: "Cloud computing software, using a hybrid separation model, makes the design and system operation organic, by optimizing the processing of the data engine to complete the operation of the software.</p>
