--- a/htmls/projects/20220418K.html
+++ b/htmls/projects/20220418K.html
@@ -55,7 +55,12 @@
             <td colspan="4"><b>Attachments & Links</b></td>
           </tr>
           <tr>
-            <td colspan="4"><a href="../../resources/Attachments/projects/20220418K/20220418K-annex1.pdf"><i>Download attachment</i></a>&#xe552;or&#xe552;<a href="https://register.ccopyright.com.cn/publicInquiry.html?type=softList&registerNumber=2022SR0787016&keyWord=%E5%BC%A0%E7%90%9B&publicityType=ALL&registerDateType=ALL"><i>View online</i></a></td>
+            <td><b>Proof of Copyright</b></td>
+            <td colspan="3"><a href="../../resources/Attachments/projects/20220418K/20220418K-annex1.pdf"><i>Download attachment</i></a>&#xe552;or&#xe552;<a href="https://register.ccopyright.com.cn/publicInquiry.html?type=softList&registerNumber=2022SR0787016&keyWord=%E5%BC%A0%E7%90%9B&publicityType=ALL&registerDateType=ALL"><i>View online</i></a></td>
+          </tr>
+          <tr>
+            <td><b>Installation file download</b></td>
+            <td colspan="3"><a href="../../resources/Attachments/projects/20220418K/KTsetup.msi"><i>KT V1.0 Setup.msi</i></a></td>
           </tr>
           </table>
         </div>
