--- a/htmls/researches/20220628Current.html
+++ b/htmls/researches/20220628Current.html
@@ -49,7 +49,8 @@
             <td colspan="3"><b>Attachments & Links</b></td>
           </tr>
           <tr>
-            <td colspan="3"><!--a><i>Download attachment</i></a>&#xe552;or&#xe552;--><a href="https://kns.cnki.net/kcms/detail/detail.aspx?dbcode=CJFD&dbname=CJFDLAST2022&filename=NJJY202206009&uniplatform=NZKPT&v=3BY1pQPcyTS8uoF0sIaS3bLKYALkrKRSP276lywfjimNnqFxDoAUdXOlZZvZg1OP"><i>View online</i></a></td>
+            <td><b>Article</b></td>
+            <td colspan="2"><!--a><i>Download attachment</i></a>&#xe552;or&#xe552;--><a href="https://kns.cnki.net/kcms/detail/detail.aspx?dbcode=CJFD&dbname=CJFDLAST2022&filename=NJJY202206009&uniplatform=NZKPT&v=3BY1pQPcyTS8uoF0sIaS3bLKYALkrKRSP276lywfjimNnqFxDoAUdXOlZZvZg1OP"><i>View online</i></a></td>
           </tr>
           </table>
         </div>
