--- a/htmls/projects/CigaretteGFDDBOTPOAF/20210328Cigarette.html
+++ b/htmls/projects/CigaretteGFDDBOTPOAF/20210328Cigarette.html
@@ -13,7 +13,7 @@
     <meta name="author" content="Killmil Biratch">
 
     <link rel="shortcut icon" href="../../../resources/images/favicon.ico">
-    <title>Killmil Biratch</title>
+    <title>Cigarette gas filtration device designed based on the principle of air flow | Killmil Biratch</title>
 
     <meta name="description" content="Personal website of Killmil Biratch">
 
@@ -54,7 +54,7 @@
           </tr>
           <tr>
             <td><b>Certificate of Patent Rights</b></td>
-            <td colspan="2"><a href="../../../resources/Attachments/projects/20220104Cigarette/20220104Cigarette-annex1.pdf"><i>Download attachment</i></a>&#xe552;or&#xe552;<a href="http://epub.cnipa.gov.cn/cred/CN215381481U"><i>View online</i></a></td>
+            <td colspan="2"><a href="../../../resources/Attachments/projects/20220104Cigarette/20220104Cigarette-annex1.pdf"><i>Download attachment</i></a>&emsp;or&emsp;<a href="http://epub.cnipa.gov.cn/cred/CN215381481U"><i>View online</i></a></td>
           </tr>
           </table>
         </div>
