--- a/htmls/projects/KTS/20220603K.html
+++ b/htmls/projects/KTS/20220603K.html
@@ -56,7 +56,7 @@
           </tr>
           <tr>
             <td><b>Proof of Copyright</b></td>
-            <td colspan="3"><a href="../../../resources/Attachments/projects/20220603K/20220603K-annex1.0.0.pdf"><i>Download attachment</i></a>&#xe552;or&#xe552;<a href="https://register.ccopyright.com.cn/publicInquiry.html?type=softList&registerNumber=2022SR1522318&keyWord=%E5%BC%A0%E7%90%9B&publicityType=ALL&registerDateType=ALL"><i>View online</i></a></td>
+            <td colspan="3"><a href="../../../resources/Attachments/projects/20220603K/20220603K-annex1.0.0.pdf"><i>Download attachment</i></a>&emsp;or&emsp;<a href="https://register.ccopyright.com.cn/publicInquiry.html?type=softList&registerNumber=2022SR1522318&keyWord=%E5%BC%A0%E7%90%9B&publicityType=ALL&registerDateType=ALL"><i>View online</i></a></td>
           </tr>
           <!--tr>
             <td><b>Installation file download</b></td>
