--- a/htmls/projects/RoboticAHCVMS/20210915Robotic.html
+++ b/htmls/projects/RoboticAHCVMS/20210915Robotic.html
@@ -56,7 +56,7 @@
           </tr>
           <tr>
             <td><b>Proof of Copyright</b></td>
-            <td colspan="3"><a href="../../../resources/Attachments/projects/20210915Robotic/20210915Robotic-annex1.pdf"><i>Download attachment</i></a>&#xe552;or&#xe552;<a href="https://register.ccopyright.com.cn/publicInquiry.html?type=softList&registerNumber=2021SR1799776&keyWord=%E6%9C%BA%E6%A2%B0%E8%87%82%E4%B8%8A%E4%BD%8D%E6%9C%BA%E5%8F%AF%E8%A7%86%E5%8C%96%E7%9B%91%E6%8E%A7%E7%B3%BB%E7%BB%9F&publicityType=ALL&registerDateType=ALL%E3%80%91"><i>View online</i></a></td>
+            <td colspan="3"><a href="../../../resources/Attachments/projects/20210915Robotic/20210915Robotic-annex1.pdf"><i>Download attachment</i></a>&emsp;or&emsp;<a href="https://register.ccopyright.com.cn/publicInquiry.html?type=softList&registerNumber=2021SR1799776&keyWord=%E6%9C%BA%E6%A2%B0%E8%87%82%E4%B8%8A%E4%BD%8D%E6%9C%BA%E5%8F%AF%E8%A7%86%E5%8C%96%E7%9B%91%E6%8E%A7%E7%B3%BB%E7%BB%9F&publicityType=ALL&registerDateType=ALL%E3%80%91"><i>View online</i></a></td>
           </tr>
           <!--tr>
             <td><b>Installation file download</b></td>
