--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@
         <h1><a href="index.html">Blogs</a></h1>
       </header>
       <div class="div-root-blog-Content">
-        <p id="div-root-blogs-Content-title">2023-01-01&emsp;&emsp;<a href="htmls/Blogs/test/test.html"><b>TEST</b></a></p>
+        <p id="div-root-blogs-Content-title">2023-01-24&emsp;&emsp;<a href="htmls/Blogs/FastWriterAFWB/20230124Fast.html"><b>Fast Writer — a fast website builder</b></a></p>
       </div>
     </div>
   </body>
