--- a/htmls/Blogs/FastWriterAFWB/20230124Fast.html
+++ b/htmls/Blogs/FastWriterAFWB/20230124Fast.html
@@ -67,7 +67,7 @@
         <p id="div-root-content-Content-text">After writing, just click the "Save As" (File>>Save As) button to generate an html file, and then click the "Exit" (File>>Exit) button to exit the program.</p>
         <p id="div-root-content-Content-text"><b><i>Attachments and downloadable files</i></b></p>
         <p id="div-root-content-Content-attachment"><a href="../../../resources/Attachments/blogs/20230124Fast/ExampleFiles.zip"><i>Sample File (V.alpha 0.1)</i></a></p>
-        <p id="div-root-content-Content-attachment"><a href=""><i>Software Installation File (V.alpha 0.1)</i></a></p>
+        <p id="div-root-content-Content-attachment"><a href="../../../resources/Attachments/blogs/20230124Fast/FW v0.1.1.01Setup.msi"><i>Software Installation File (V.alpha 0.1)</i></a></p>
       </div>
     </div>
   </body>
