--- a/htmls/projects/LightTMLFDSFCS/20220823Light.html
+++ b/htmls/projects/LightTMLFDSFCS/20220823Light.html
@@ -25,8 +25,8 @@
         <h1><a href="../../../project.html">Projects</a></h1>
       </header>
       <div class="div-root-content-Content">
-        <h3>K.Translation software</h3>
-        <p id="div-root-content-Content-abstract">2022-06-03 | Software</p>
+        <h3>Light text markup language format dictionary search file compiler software</h3>
+        <p id="div-root-content-Content-abstract">2022-08-23 | Software</p>
         <div class="div-root-content-Content-table">
           <table>
             <tr>
@@ -35,8 +35,8 @@
               <td><b>Announcement time</b></td>
             </tr>
             <tr>
-              <td>K.Translation software</td>
-              <td colspan="2">Jun 03,2022</td>
+              <td>Light text markup language format dictionary search file compiler software</td>
+              <td colspan="2">Aug 23,2022</td>
               <td>Nov 17,2022</td>
             </tr>
             <tr>
@@ -46,26 +46,29 @@
               <td colspan="1"><b>Supported languages</b></td>
           </tr>
           <tr>
-            <td>V1.1.3</td>
+            <td>V1.0.0</td>
               <td>T</td>
               <td>T</td>
               <td colspan="1">Chinese Simplified</td>
           </tr>
-          <tr>
             <td colspan="4"><b>Attachments & Links</b></td>
           </tr>
           <tr>
             <td><b>Proof of Copyright</b></td>
-            <td colspan="3"><a href="../../../resources/Attachments/projects/20220603K/20220603K-annex1.pdf"><i>Download attachment</i></a>&emsp;or&emsp;<a href="https://register.ccopyright.com.cn/publicInquiry.html?type=softList&registerNumber=2022SR1522318&keyWord=%E5%BC%A0%E7%90%9B&publicityType=ALL&registerDateType=ALL"><i>View online</i></a></td>
+            <td colspan="3"><a href="../../../resources/Attachments/projects/20220823Light/20220823Light-annex1.pdf"><i>Download attachment</i></a>&emsp;or&emsp;<a href=""><i>View online</i></a></td>
           </tr>
           <!--tr>
             <td><b>Installation file download</b></td>
-            <td colspan="3"><a href="../../../resources/Attachments/projects/20220418K/KTsetup-V1.0.0.msi"><i>KT V1.0 Setup.msi</i></a></td>
+            <td colspan="3"><a href=""><i></i></a></td>
+          </tr>
+          <tr>
+            <td><b>View online</b></td>
+            <td colspan="3"><a href=""><i></i></a></td>
           </tr-->
           </table>
         </div>
-        <p id="div-root-content-Content-text">This software can realize the function of instant translation of texts in two different languages, and the input text can be quickly converted into the target language text through this software.</p>
-        <p id="div-root-content-Content-note">This paper describes an executable program that can run under Microsoft Windows operating system, named "K.Translation software" (referred to as "software" for short), and its version number is "V1.1.3". This software is registered by the National Copyright Administration of the People's Republic of China according to the relevant provisions in the Regulations of the People's Republic of China on the Protection of Computer Software and the Measures of the People's Republic of China on the Registration of Computer Software (Registration number "2022SR1522318"). According to the relevant provisions of the Bern Convention for the Protection of Literary and Artistic Works and the Copyright Law of the People's Republic of China, the copyright holder(s) shall enjoy full copyright and all other rights to the software.</p>
+        <p id="div-root-content-Content-text">The software is capable of reading ".ltml" format files, extracting valid information from the files by keyword search and outputting them.</p>
+        <p id="div-root-content-Content-note">This paper describes an executable program that can run under Microsoft Windows operating system, named "Light text markup language format dictionary search file compiler software" (referred to as "software" for short), and its version number is "V1.0". This software is registered by the National Copyright Administration of the People's Republic of China according to the relevant provisions in the Regulations of the People's Republic of China on the Protection of Computer Software and the Measures of the People's Republic of China on the Registration of Computer Software (Registration number "2022SR1521967"). According to the relevant provisions of the Bern Convention for the Protection of Literary and Artistic Works and the Copyright Law of the People's Republic of China, the copyright holder(s) shall enjoy full copyright and all other rights to the software.</p>
       </div>
     </div>
   </body>
