--- a/htmls/projects/LightTMLFDSFCS/20220823Light.html
+++ b/htmls/projects/LightTMLFDSFCS/20220823Light.html
@@ -67,7 +67,7 @@
           </tr-->
           </table>
         </div>
-        <p id="div-root-content-Content-text">The software is capable of reading ".ltml" format files, extracting valid information from the files by keyword search and outputting them.</p>
+        <p id="div-root-content-Content-text">The software converts the input string into a ".ltml" format file with a specific identifier.</p>
         <p id="div-root-content-Content-note">This paper describes an executable program that can run under Microsoft Windows operating system, named "Light text markup language format dictionary search file compiler software" (referred to as "software" for short), and its version number is "V1.0". This software is registered by the National Copyright Administration of the People's Republic of China according to the relevant provisions in the Regulations of the People's Republic of China on the Protection of Computer Software and the Measures of the People's Republic of China on the Registration of Computer Software (Registration number "2022SR1521967"). According to the relevant provisions of the Bern Convention for the Protection of Literary and Artistic Works and the Copyright Law of the People's Republic of China, the copyright holder(s) shall enjoy full copyright and all other rights to the software.</p>
       </div>
     </div>
