--- a/htmls/Blogs/FastWriterAFWB/20230124Fast.html
+++ b/htmls/Blogs/FastWriterAFWB/20230124Fast.html
@@ -26,7 +26,7 @@
       </header>
       <div class="div-root-content-Content">
         <h3>Fast Writer — a fast website builder</h3>
-        <p id="div-root-content-Content-abstract">2023-01-24 | Detail</p>
+        <p id="div-root-content-Content-abstract">2023-01-27 | Detail</p>
         <div class="div-root-content-Content-table">
           <table>
             <tr>
@@ -59,6 +59,10 @@
             <p>3</p>
           </div>
         </div-->
+        <p id="div-root-content-Content-text"><b>2023-01-27 V.alpha 0.2</b></p>
+        <p id="div-root-content-Content-text">The software can now rebuild the workbench without rebooting. For example, after generating a file in ".html" format, you can click the "New" button to create a new workbench immediately, instead of having to exit the software first.</p>
+        <p id="div-root-content-Content-text"><b><i>Attachments and downloadable files</i></b></p>
+        <p id="div-root-content-Content-attachmentEND"><a href="../../../resources/Attachments/blogs/20230127Fast/FW v0.2.2.02Setup.msi"><i>Software Installation File (V.alpha 0.2)</i></a></p>
         <p id="div-root-content-Content-text"><b>2023-01-24 V.alpha 0.1</b></p>
         <p id="div-root-content-Content-text">During the process of building the site, I encountered some difficulties in writing the code, for example, writing a whole paragraph in one line makes it difficult to go through during inspection, and when the code is too long it becomes difficult to read, etc.</p>
         <p id="div-root-content-Content-text">Therefore, I have written a visual program which relies on .NET and C# to build. Through this software, it is possible to modularize the html code writing, by specifying some prescribed text input boxes and simply typing characters in the corresponding text boxes, its possible to generate html files in a specific format, which can improve certain efficiency while ensuring the readability of the files.</p>
@@ -67,7 +71,7 @@
         <p id="div-root-content-Content-text">After writing, just click the "Save As" (File>>Save As) button to generate an html file, and then click the "Exit" (File>>Exit) button to exit the program.</p>
         <p id="div-root-content-Content-text"><b><i>Attachments and downloadable files</i></b></p>
         <p id="div-root-content-Content-attachment"><a href="../../../resources/Attachments/blogs/20230124Fast/ExampleFiles.zip"><i>Sample File (V.alpha 0.1)</i></a></p>
-        <p id="div-root-content-Content-attachment"><a href="../../../resources/Attachments/blogs/20230124Fast/FW v0.1.1.01Setup.msi"><i>Software Installation File (V.alpha 0.1)</i></a></p>
+        <p id="div-root-content-Content-attachmentEND"><a href="../../../resources/Attachments/blogs/20230124Fast/FW v0.1.1.01Setup.msi"><i>Software Installation File (V.alpha 0.1)</i></a></p>
       </div>
     </div>
   </body>
