--- a/research.html
+++ b/research.html
@@ -17,7 +17,7 @@
 
     <meta name="description" content="Personal website of Killmil Biratch">
 
-    <link rel="stylesheet" href="css/StylePc1366.css">
+    <script src="js/timeControl.js" type="text/javascript"></script>
   </head>
   <body class="body-others">
     <div class="div-root-research">
