--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <meta name="description" content="Personal website of Killmil Biratch">
     <meta name="keywords" content="Killmil, Biratch, Killmil Biratch, killmil, biratch, killmil biratch">
 
-    <link rel="stylesheet" href="css/StylePc1366.css">
+    <script src="js/timeControl.js" type="text/javascript"></script>
+    <!--link rel="stylesheet" href="css/StylePc1080pDay.css"-->
   </head>
   <body>
     <div class="div-root">
