--- a/about.html
+++ b/about.html
@@ -39,6 +39,11 @@
           <p><i>Bachelor of Engineering</i></p>
           <p>Research area: Robotics Engineering</p>
         </div>
+        <div class="div-root-about-EducationExperience-Details">
+          <p><b><a href="https://www.tyut.edu.cn/">TAIYUAN UNIVERSITY OF TECHNOLOGY</a></b>&emsp;&emsp;Shanxi,China</p>
+          <p><i>Bachelor of Engineering</i></p>
+          <p>Research area: Computer Science Technology</p>
+        </div>
       </div>
     </div>
   </body>
