--- a/project.html
+++ b/project.html
@@ -17,6 +17,9 @@
 
     <meta name="description" content="Personal website of Killmil Biratch">
 
+    <link rel='prefetch' href='css/StylePc1080pDay.css'>
+    <link rel='prefetch' href='css/StylePc1080pNight.css'>
+
     <script src="js/timeControl.js" type="text/javascript"></script>
   </head>
   <body class="body-others">
