--- a/blog.html
+++ b/blog.html
@@ -17,8 +17,10 @@
 
     <meta name="description" content="Personal website of Killmil Biratch">
 
-    <link rel='prefetch' href='css/StylePc1080pDay.css'>
-    <link rel='prefetch' href='css/StylePc1080pNight.css'>
+    <link rel="prefetch" href="css/StylePc1080pDay.css">
+    <link rel="preload" href="css/StylePc1080pDay.css">
+    <link rel="prefetch" href="css/StylePc1080pNight.css">
+    <link rel="preload" href="css/StylePc1080pNight.css">
 
     <script src="js/timeControl.js" type="text/javascript"></script>
   </head>
