--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
     <meta name="description" content="Personal website of Killmil Biratch">
     <meta name="keywords" content="Killmil, Biratch, Killmil Biratch, killmil, biratch, killmil biratch">
 
-    <link rel='prefetch' href='css/StylePc1080pDay.css'>
-    <link rel='prefetch' href='css/StylePc1080pNight.css'>
+    <link rel="prefetch" href="css/StylePc1080pDay.css">
+    <link rel="preload" href="css/StylePc1080pDay.css">
+    <link rel="prefetch" href="css/StylePc1080pNight.css">
+    <link rel="preload" href="css/StylePc1080pNight.css">
 
+    <script src="js/loading.js" type="text/javascript"></script>
     <script src="js/timeControl.js" type="text/javascript"></script>
     <!--link rel="stylesheet" href="css/StylePc1080pDay.css"-->
   </head>
