--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 
     <script src="js/timeControl.js" type="text/javascript"></script>
   </head>
-  <body>
+  <body style="display: none;">
     <div class="div-root-about">
       <header>
         <a href="index.html"><img src="resources/images/hh.jpg" width="250rem" height="250rem" oncontextmenu="return false"></a>
