--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
 
     <script src="js/timeControl.js" type="text/javascript"></script>
   </head>
-  <body class="body-others">
+  <body class="body-others" style="display: none;">
     <div class="div-root-blog">
       <header class="header-NormalHeader">
         <h1><a href="index.html">Blogs</a></h1>
