--- a/htmls/researches/CurrentRSAFDDOAR/20220628Current.html
+++ b/htmls/researches/CurrentRSAFDDOAR/20220628Current.html
@@ -24,7 +24,7 @@
 
     <script src="../../../js/timeControl.js" type="text/javascript"></script>
   </head>
-  <body class="body-others">
+  <body class="body-others" style="display: none;">
     <div class="div-root-content">
       <header class="header-Content">
         <h1><a href="../../../research.html">Researches</a></h1>
