--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script src="js/timeControl.js" type="text/javascript"></script>
     <!--link rel="stylesheet" href="css/StylePc1080pDay.css"-->
   </head>
-  <body>
+  <body style="display: none;">
     <div class="div-root">
       <header>
         <h1 id="header-Title"><b>KILLMIL BIRATCH</b></h1>
